# cplusplus

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp  utils.cpp  utils.h
classes/: aforizma.cpp  aforizma.h  utils.cpp
functions/: faktoriyel.cpp  faktoriyel.h  function_overloading.cpp  function_overloading.h  pointers.cpp  pointers.h  print_array.cpp  print_array.h  print_multi_array.cpp  print_multi_array.h  sayisal.cpp  sayisal.h
programs/: 1_girilen_bes_sayiyi_topla.cpp  1_girilen_bes_sayiyi_topla.h  2_menu_switch.cpp  2_menu_switch.h
